--- a/configs/VRE_Pathtracer.ini
+++ b/configs/VRE_Pathtracer.ini
@@ -2,7 +2,7 @@ b_do_gi : true
 b_do_spectral : true
 
 n_max_march_iterations : 512        ; >0
-n_ray_samples : 1                ; >0
+n_ray_samples : 32            ; >0
 n_ssaa_samples : 1                  ; >0
 
 n_em_evals : 10000                  ; >=0
@@ -17,7 +17,7 @@ f_max_wl : 700                      ; >0
 
 b_debug_normals : false
 b_debug_iterations : false
-b_do_thin_shadows : false
+b_do_thin_shadows : true
 b_do_branched_dielectric : true
 b_do_double_direct_sampling : true
 
