--- a/configs/VAureaNox.ini
+++ b/configs/VAureaNox.ini
@@ -1,4 +1,4 @@
-render_scene : cornell                      ;cornell | pathtracing | gi_test  | spider
+render_scene : pathtracing                      ;cornell | pathtracing | gi_test  | spider
 renderer_type : pathtracer                  ;pathtracer
 
 n_max_threads : 0                           ; >=0
