MAJOR Bugfix and some additions
Fixed poll_volume bug (ior polling is now correct)
Fixed direct lighting, was applying a wrong estimation both in pdf and f ...
Fixed countless precision errors , added NaN , Inf and NNormal numbers detection and handling
Implemented proper floating point equality comparrison
Fixed nested volumes (still needs testing with transmissive inside transmissive)
Fixed and optimized brdf evaluation
Fixed pdfs consequently

Added vop_cut operator 
Added vop_onion operator

--- a/configs/VRE_Pathtracer.ini
+++ b/configs/VRE_Pathtracer.ini
@@ -2,7 +2,7 @@ b_do_gi : true
 b_do_spectral : true
 
 n_max_march_iterations : 512        ; >0
-n_ray_samples : 32           ; >0
+n_ray_samples : 1          ; >0
 n_ssaa_samples : 1                  ; >0
 
 n_em_evals : 10000                  ; >=0
@@ -19,7 +19,8 @@ b_debug_normals : false
 b_debug_iterations : false
 b_do_thin_shadows : true
 b_do_branched_dielectric : true
-b_do_double_direct_sampling : true
+b_do_double_direct_sampling : true          ;deprecated
+b_use_poll_ray_transmissive : false
 
 e_aa_mode : montecarlo              ;ssaa | montecarlo
 
