--- a/configs/VAureaNox.ini
+++ b/configs/VAureaNox.ini
@@ -1,6 +1,7 @@
-render_scene : cornell                      ;cornell | pathtracing | gi_test  | spider | nested
+render_scene : pathtracing                      ;cornell | pathtracing | gi_test  | spider | nested
 renderer_type : pathtracer                  ;pathtracer
 
+n_max_threads : 0                           ; >=0
 n_max_threads : 0                           ; >=0
 i_image_width : 648                         ; >0
 i_image_height : 480                        ; >0
