Code cleanup and fixes
Removed unused parts, fixed various minor bugs

--- a/configs/VAureaNox.ini
+++ b/configs/VAureaNox.ini
@@ -1,4 +1,4 @@
-render_scene : cornell                      ;cornell | pathtracing | gi_test  | spider | nested
+render_scene : nested                      ;cornell | pathtracing | gi_test  | spider | nested
 renderer_type : pathtracer                  ;pathtracer | bdpt
 
 n_max_threads : 0                           ; >=0
