--- a/configs/VRE_Pathtracer.ini
+++ b/configs/VRE_Pathtracer.ini
@@ -1,11 +1,11 @@
-b_do_spectral : false
+b_do_spectral : true
 
 n_max_march_iterations : 512        ; >0
 n_ray_samples : 1                 ; >0
 
 n_em_evals : 100000                 ; >=0
 
-f_ray_tmin : 0.001f                 ; >0
+f_ray_tmin : 0.0001f                 ; >0
 f_ray_tmax : 10000.0f               ; >0
 f_normal_eps : 0.001f              ; >0
 f_refracted_ray_eps_mult : 2.0f     ; >0
@@ -14,6 +14,6 @@ f_min_wl : 400                      ; >0
 f_max_wl : 700                      ; >0
 
 b_debug_normals : false
-b_debug_iterations : true
+b_debug_iterations : false
 
 
