--- a/configs/VAureaNox.ini
+++ b/configs/VAureaNox.ini
@@ -1,5 +1,5 @@
-render_scene : cornell                      ;cornell | pathtracing | gi_test  | spider | nested
-renderer_type : pathtracer                  ;pathtracer | bdpt
+render_scene : spider                      ;cornell | pathtracing | gi_test  | spider | nested
+renderer_type : pathtracer                  ;pathtracer
 
 n_max_threads : 0                           ; >=0
 i_image_width : 648                         ; >0
