--- a/configs/VAureaNox.ini
+++ b/configs/VAureaNox.ini
@@ -1,9 +1,11 @@
-render_scene : cornell                      ;cornell | pathtracing | gi_test  | spider | nested
+render_scene : ParsingTest.vnxs                    ;cornell | pathtracing | gi_test  | spider | nested
 renderer_type : pathtracer                  ;pathtracer
 
 n_max_threads : 0                           ; >=0
-i_image_width : 648                         ; >0
-i_image_height : 480                        ; >0
+i_image_width : 1920                         ; >0
+i_image_height : 1080                        ; >0
+
+n_em_evals : 100000
 
 b_verbose_precalc : false
 b_verbose_parsing : false
