--- a/configs/VRE_Pathtracer.ini
+++ b/configs/VRE_Pathtracer.ini
@@ -1,9 +1,9 @@
 b_do_spectral : true
 
 n_max_march_iterations : 512        ; >0
-n_ray_samples : 4                 ; >0
+n_ray_samples : 16                 ; >0
 
-n_em_evals : 10000                 ; >=0
+;n_em_evals : 10000                 ; >=0
 
 f_ray_tmin : 0.0001f                 ; >0
 f_ray_tmax : 10000.0f               ; >0
