--- a/configs/VAureaNox.ini
+++ b/configs/VAureaNox.ini
@@ -1,9 +1,9 @@
-render_scene : ParsingTest.vnxs                    ;cornell | pathtracing | gi_test  | spider | nested
+render_scene : gi_test                  ;cornell | pathtracing | gi_test  | spider | nested
 renderer_type : pathtracer                  ;pathtracer
 
 n_max_threads : 0                           ; >=0
-i_image_width : 1920                         ; >0
-i_image_height : 1080                        ; >0
+i_image_width : 648                         ; >0
+i_image_height : 480                        ; >0
 
 n_em_evals : 100000
 
