--- a/configs/VAureaNox.ini
+++ b/configs/VAureaNox.ini
@@ -1,4 +1,4 @@
-render_scene : gi_test                  ;cornell | pathtracing | gi_test  | spider | nested
+render_scene : ParsingTest.vnxs                  ;cornell | pathtracing | gi_test  | spider | nested
 renderer_type : pathtracer                  ;pathtracer
 
 n_max_threads : 0                           ; >=0
