--- a/configs/VAureaNox.ini
+++ b/configs/VAureaNox.ini
@@ -5,7 +5,13 @@ n_max_threads : 0                           ; >=0
 i_image_width : 648                         ; >0
 i_image_height : 480                        ; >0
 
+
 n_em_evals : 100000
+n_max_march_iterations : 512        ; >0
+f_ray_tmin : 0.0001f                 ; >0
+f_ray_tmax : 10000.0f               ; >0
+f_normal_eps : 0.001f              ; >0
+
 
 b_verbose_precalc : false
 b_verbose_parsing : false
