--- a/configs/VAureaNox.ini
+++ b/configs/VAureaNox.ini
@@ -1,19 +1,24 @@
-render_scene : ParsingTest.vnxs              ;cornell | pathtracing | gi_test  | spider | nested
-renderer_type : pathtracer                  ;pathtracer
+render_scene : cornell              ;cornell | pathtracing | gi_test  | spider | nested |*.vnxs for external files
+renderer_type : experimental_pt                  ;experimental_pt
 
-n_max_threads : 0                           ; >=0
+i_max_threads : 0                           ; >=0
 i_image_width : 648                         ; >0
 i_image_height : 480                        ; >0
 
+i_st_algo : enhanced                ;naive / relaxed / enhanced
+i_normals_algo : tht                ;tht / cnt
+i_eh_precalc_algo : full            ;full / strict
 
-n_em_evals : 100000
-n_max_march_iterations : 512        ; >0
+i_em_evals : 10000
+i_max_march_iterations : 512        ; >0  512 is enough
 f_ray_tmin : 0.0001f                 ; >0
 f_ray_tmax : 10000.0f               ; >0
-f_normal_eps : 0.001f              ; >0
+f_normal_eps : 0.0001f              ; >0
+
+i_output_depth : 255                ; 2 - 65535
 
 
-b_verbose_precalc : false
+b_verbose_precalc : true
 b_verbose_parsing : false
 b_start_monitor : true
 
