Small Fix to volumetric

--- a/configs/VAureaNox.ini
+++ b/configs/VAureaNox.ini
@@ -1,4 +1,4 @@
-render_scene : gi_test              ;cornell | pathtracing | gi_test  | spider | nested |*.vnxs for external files
+render_scene : cornell              ;cornell | pathtracing | gi_test  | spider | nested |*.vnxs for external files
 renderer_type : experimental_pt                  ;experimental_pt
 
 i_max_threads : 0                           ; >=0
